Main styles created

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Blackjack</title>
 </head>
 <body>
-    <header>
+    <header class="titulo">
         Blackjack
     </header>
     <script src="/Assets/js/juego.js"></script>
