--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <header class="titulo">
         Blackjack
     </header>
+    <div class="row mt-2">
+        <div class="col text-center">
+            <button class="btn btn-danger">Nuevo juego</button>
+            <button class="btn btn-primary">Pedir cartas</button>
+            <button class="btn btn-primary">Detener</button>
+
+        </div>
+
+    </div>
     <script src="/Assets/js/juego.js"></script>
 </body>
 </html>
