--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
     <header class="titulo">
         Blackjack
     </header>
+    
     <div class="row mt-2">
         <div class="col text-center">
             <button class="btn btn-danger">Nuevo juego</button>
             <button class="btn btn-primary">Pedir cartas</button>
             <button class="btn btn-primary">Detener</button>
+        </div>
+    </div>
+
+    <div class="row-container">
+        <div class="col">
+            <h1>Jugador 1 - <small>0</small></h1>
+            <div id="Jugador-cartas">
+                <img class="carta" src="/Assets/cartas/2C.png" >
+                <img class="carta" src="/Assets/cartas/2C.png" >
+                <img class="carta" src="/Assets/cartas/2C.png" >
+                <img class="carta" src="/Assets/cartas/2C.png" >
+            </div>
 
         </div>
 
     </div>
+
     <script src="/Assets/js/juego.js"></script>
 </body>
 </html>
