--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
 
         </div>
 
+        <div class="row-container mt-2">
+            <div class="col">
+                <h1>Computadora - <small>0</small></h1>
+                <div id="computadora-cartas">
+                    <img class="carta" src="/Assets/cartas/2C.png" >
+                    <img class="carta" src="/Assets/cartas/2C.png" >
+                    <img class="carta" src="/Assets/cartas/2C.png" >
+                    <img class="carta" src="/Assets/cartas/2C.png" >
+                </div>
+    
+            </div>
+
     </div>
 
     <script src="/Assets/js/juego.js"></script>
